wsl-old/tf-manifests/commons/simple-ec2-eice/network.tf
# tflint-ignore-file: terraform_required_providers
data "http" "client_global_ip" {
  url = "https://inet-ip.info"
}
locals {
  allowed_cidr = replace("${data.http.client_global_ip.response_body}/32", "\n", "")
}
resource "aws_vpc" "vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Environment = "dev"
    Terraform   = "true"
  }
}
resource "aws_subnet" "subnet" {
  vpc_id                  = aws_vpc.vpc.id
  map_public_ip_on_launch = true
  cidr_block              = "10.0.0.0/24"

  tags = {
    Environment = "dev"
    Terraform   = "true"
  }
}
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Environment = "dev"
    Terraform   = "true"
  }
}
resource "aws_route_table" "rt" {
  vpc_id = aws_vpc.vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Environment = "dev"
    Terraform   = "true"
  }
}
resource "aws_route_table_association" "rta" {
  subnet_id      = aws_subnet.subnet.id
  route_table_id = aws_route_table.rt.id
}
resource "aws_security_group" "sg" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Environment = "dev"
    Terraform   = "true"
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [local.allowed_cidr]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
